--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -24,6 +24,7 @@ jinja2 = "^2.11.2"
 tenacity = "^6.1.0"
 python-multipart = "^0.0.5"
 SQLAlchemy-Utils = "^0.36.8"
+typer = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
