--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/alembic.ini
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/alembic.ini
@@ -39,7 +39,7 @@ prepend_sys_path = .
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://localhost/{{cookiecutter.project_slug}}
+# sqlalchemy.url = postgresql://localhost/{{cookiecutter.project_slug}}
 
 
 [post_write_hooks]
